--- a/src/frontendMain/web/index.html
+++ b/src/frontendMain/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>KVision Template</title>
+    <title>Casa Dulce Web</title>
     <script src="main.bundle.js" type="text/javascript"></script>
 </head>
 <body>
